--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,7 @@ jobs:
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
+        continue-on-error: true  # Attestation only works for public repos
         with:
           subject-path: htop-win-${{ matrix.arch }}.exe
 
